<resources>
    <string name="app_name">Calculator</string>
    <string name="textview">TextView</string>
    <string name="pyth">PYTH</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="button0">Button</string>
    <string name="button1">Button</string>
    <string name="ans">ANS</string>
    <string name="button2">Button</string>
    <string name="s_d"><![CDATA[S<=>D]]></string>
    <string name="button3">Button</string>
    <string name="but">)</string>
    <string name="button4">Button</string>
    <string name="close">=</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="off">OFF</string>
    <string name="_5">5</string>
    <string name="ac">AC</string>
    <string name="div">/</string>
    <string name="dec">.</string>
    <string name="button">Button</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="on">ON</string>
    <string name="_4">4</string>
    <string name="mul">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="plus">+</string>
    <string name="bopen">(</string>
    <string name="bclose">)</string>
    <string name="equals">=</string>
    <string name="btny">btny</string>
    <string name="comma">,</string>
    <string name="pyth_ii">PYTH II</string>
</resources>